tests/compile-fail/cases/tainted_borrowed_into_arg.stderr
error[E0277]: the trait bound `Tainted<Vec<u8>>: AsRef<OsStr>` is not satisfied
 --> cases/tainted_borrowed_into_arg.rs:6:36
  |
6 |     Command::new("/bin/true").arg(&t);
  |                               ---  ^ the trait `AsRef<OsStr>` is not implemented for `Tainted<Vec<u8>>`
  |                               |
  |                               required by a bound introduced by this call
  |
  = note: required for `&Tainted<Vec<u8>>` to implement `AsRef<OsStr>`
note: required by a bound in `Command::arg`
 --> $RUST/std/src/process.rs
  |
  |     pub fn arg<S: AsRef<OsStr>>(&mut self, arg: S) -> &mut Command {
  |                   ^^^^^^^^^^^^ required by this bound in `Command::arg`
